<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#121212"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_page"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Register Username"
        android:padding="12dp"
        android:hint="@string/username"
        android:background="#1E1E1E"
        android:textColor="#FFFFFF"
        android:textColorHint="#B0B0B0"
        android:layout_marginBottom="12dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Enter Password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="#1E1E1E"
        android:textColor="#FFFFFF"
        android:textColorHint="#B0B0B0"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="#7E57C2"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnGoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        android:backgroundTint="@android:color/transparent"
        android:textColor="#7E57C2"/>
</LinearLayout>